Fix missing information on setup process in tutorial #1 + add more details in tutorial #4 (ETC)

--- a/examples/LVM_data_simulator_tutorial1.ipynb
+++ b/examples/LVM_data_simulator_tutorial1.ipynb
@@ -17,10 +17,7 @@
    "cell_type": "markdown",
    "id": "9fd17acd",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     "**This is a tutorial on how to install, configure and test the very basic usage of the LVM Data Simulator.**\n",
@@ -28,7 +25,7 @@
     "- More realistic and useful simulations are considered in [tutorial #3](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial3.ipynb) - please go there if you have already installed and configured the package and want to learn how to simulate the source field in more details.\n",
     "- A dedicated function to run the simulator as an ETC is shown in [tutorial #4](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial4.ipynb) \n",
     "\n",
-    "_Last update: 2022/09/01_"
+    "_Last update: 2022/02/22_"
    ]
   },
   {
@@ -58,10 +55,7 @@
    "cell_type": "markdown",
    "id": "723d7986",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     "### Downloading libraries\n",
@@ -70,7 +64,7 @@
     "\n",
     "To download them you should run the following commands and move the files in the ```lvmdatasimulator/data``` directory:\n",
     "\n",
-    "```wget ftp@ftp.das.uchile.cl:/pub/enrico/LVM_cloudy_models.fits```\n",
+    "```wget ftp@ftp.das.uchile.cl:/pub/enrico/LVM_cloudy_models_phys.fits```\n",
     "\n",
     "```wget ftp@ftp.das.uchile.cl:/pub/enrico/pollux_resampled_v0.fits```\n",
     "\n",
@@ -226,10 +220,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[0;34m[INFO]: \u001b[0m139 Gaia stars in the field\n",
-      "\u001b[0;34m[INFO]: \u001b[0m101 stars are fainter than 18 and have been rejected\n",
-      "\u001b[0;34m[INFO]: \u001b[0mTransforming world coordinates to pixel coordinates\n",
-      "\u001b[0;34m[INFO]: \u001b[0mAssociating spectra to stars using library pollux_resampled_v0.fits...\n"
+      "\u001B[0;34m[INFO]: \u001B[0m139 Gaia stars in the field\n",
+      "\u001B[0;34m[INFO]: \u001B[0m101 stars are fainter than 18 and have been rejected\n",
+      "\u001B[0;34m[INFO]: \u001B[0mTransforming world coordinates to pixel coordinates\n",
+      "\u001B[0;34m[INFO]: \u001B[0mAssociating spectra to stars using library pollux_resampled_v0.fits...\n"
      ]
     },
     {
@@ -243,8 +237,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[0;34m[INFO]: \u001b[0mRescaling 38 synthetic spectra.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mSaving star list to: ./LVM_test/LVM_test_starlist.fits.gz\n"
+      "\u001B[0;34m[INFO]: \u001B[0mRescaling 38 synthetic spectra.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mSaving star list to: ./LVM_test/LVM_test_starlist.fits.gz\n"
      ]
     },
     {
@@ -295,7 +289,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[0;34m[INFO]: \u001b[0mReading the star list from file ./LVM_test/LVM_test_starlist.fits.gz\n"
+      "\u001B[0;34m[INFO]: \u001B[0mReading the star list from file ./LVM_test/LVM_test_starlist.fits.gz\n"
      ]
     }
    ],
@@ -362,10 +356,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[0;34m[INFO]: \u001b[0mStart generating 1 nebulae\n",
-      "\u001b[1;33m[WARNING]: \u001b[0mNo model ids or model parameters are set for the nebula #0: use default cloudy 'model_id=Cloud_366'\n",
-      "\u001b[0;34m[INFO]: \u001b[0mGenerated ISM saved to ./LVM_test/testneb_tutorial1.fits\n",
-      "\u001b[0;34m[INFO]: \u001b[0mISM content saved to testneb_tutorial1.fits\n"
+      "\u001B[0;34m[INFO]: \u001B[0mStart generating 1 nebulae\n",
+      "\u001B[1;33m[WARNING]: \u001B[0mNo model ids or model parameters are set for the nebula #0: use default cloudy 'model_id=Cloud_366'\n",
+      "\u001B[0;34m[INFO]: \u001B[0mGenerated ISM saved to ./LVM_test/testneb_tutorial1.fits\n",
+      "\u001B[0;34m[INFO]: \u001B[0mISM content saved to testneb_tutorial1.fits\n"
      ]
     }
    ],
@@ -401,7 +395,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[0;34m[INFO]: \u001b[0mNebulae successfully loaded from file\n"
+      "\u001B[0;34m[INFO]: \u001B[0mNebulae successfully loaded from file\n"
      ]
     }
    ],
@@ -450,10 +444,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[1;33m[WARNING]: \u001b[0mnrings is defined. It will limit the number of fibers selected.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUsing the full hexagon pattern\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUsing the inner 5 hexagonal rings.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mRotating the bundle to PA = 0 deg.\n"
+      "\u001B[1;33m[WARNING]: \u001B[0mnrings is defined. It will limit the number of fibers selected.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUsing the full hexagon pattern\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUsing the inner 5 hexagonal rings.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mRotating the bundle to PA = 0 deg.\n"
      ]
     }
    ],
@@ -493,11 +487,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[1;33m[WARNING]: \u001b[0mnrings is defined. It will limit the number of fibers selected.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUsing the full hexagon pattern\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUsing the inner 5 hexagonal rings.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mRotating the bundle to PA = 0 deg.\n",
-      "\u001b[1;33m[WARNING]: \u001b[0mBundle center coords are not defined, using the coords of the field.\n"
+      "\u001B[1;33m[WARNING]: \u001B[0mnrings is defined. It will limit the number of fibers selected.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUsing the full hexagon pattern\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUsing the inner 5 hexagonal rings.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mRotating the bundle to PA = 0 deg.\n",
+      "\u001B[1;33m[WARNING]: \u001B[0mBundle center coords are not defined, using the coords of the field.\n"
      ]
     },
     {
@@ -613,28 +607,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[0;34m[INFO]: \u001b[0mSimulating observations.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mReading the atmospheric extinction from file.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mResample extinction file to instrument wavelength solution.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mSimulating the sky emission 2 days from new moon.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUsing sky file: /Users/mors/Science/PyWorkspace/lvmdatasimulator/data/sky/LVM_LVM160_SKY_2.dat\n",
-      "\u001b[0;34m[INFO]: \u001b[0mResample sky emission to instrument wavelength solution.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mRecovering target spectra for 61 fibers.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mStart extracting nebular spectra\n",
-      "\u001b[0;34m[INFO]: \u001b[0mResampling spectra to the instrument wavelength solution.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mSaving the outputs:\n",
-      "\u001b[0;34m[INFO]: \u001b[0mInput spectra\n",
-      "\u001b[0;34m[INFO]: \u001b[0m./LVM_test/outputs/LVM_test_linear_full_input.fits saved.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mClean outputs\n",
-      "\u001b[0;34m[INFO]: \u001b[0m./LVM_test/outputs/LVM_test_linear_full_21600_no_noise.fits saved.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUncalibrated outputs\n",
-      "\u001b[0;34m[INFO]: \u001b[0m./LVM_test/outputs/LVM_test_linear_full_21600_realization.fits saved.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mCalibrated outputs\n",
-      "\u001b[0;34m[INFO]: \u001b[0m./LVM_test/outputs/LVM_test_linear_full_21600_flux.fits saved.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mSaving the 2D output maps\n",
-      "\u001b[0;34m[INFO]: \u001b[0m Saving ./LVM_test/outputs/LVM_test_linear_full_6550_6570_21600s_target_map.fits...\n",
-      "\u001b[0;34m[INFO]: \u001b[0m Saving ./LVM_test/outputs/LVM_test_linear_full_6550_6570_21600s_total_map.fits...\n",
-      "\u001b[0;34m[INFO]: \u001b[0m Saving ./LVM_test/outputs/LVM_test_fibers.reg...\n"
+      "\u001B[0;34m[INFO]: \u001B[0mSimulating observations.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mReading the atmospheric extinction from file.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mResample extinction file to instrument wavelength solution.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mSimulating the sky emission 2 days from new moon.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUsing sky file: /Users/mors/Science/PyWorkspace/lvmdatasimulator/data/sky/LVM_LVM160_SKY_2.dat\n",
+      "\u001B[0;34m[INFO]: \u001B[0mResample sky emission to instrument wavelength solution.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mRecovering target spectra for 61 fibers.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mStart extracting nebular spectra\n",
+      "\u001B[0;34m[INFO]: \u001B[0mResampling spectra to the instrument wavelength solution.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mSaving the outputs:\n",
+      "\u001B[0;34m[INFO]: \u001B[0mInput spectra\n",
+      "\u001B[0;34m[INFO]: \u001B[0m./LVM_test/outputs/LVM_test_linear_full_input.fits saved.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mClean outputs\n",
+      "\u001B[0;34m[INFO]: \u001B[0m./LVM_test/outputs/LVM_test_linear_full_21600_no_noise.fits saved.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUncalibrated outputs\n",
+      "\u001B[0;34m[INFO]: \u001B[0m./LVM_test/outputs/LVM_test_linear_full_21600_realization.fits saved.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mCalibrated outputs\n",
+      "\u001B[0;34m[INFO]: \u001B[0m./LVM_test/outputs/LVM_test_linear_full_21600_flux.fits saved.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mSaving the 2D output maps\n",
+      "\u001B[0;34m[INFO]: \u001B[0m Saving ./LVM_test/outputs/LVM_test_linear_full_6550_6570_21600s_target_map.fits...\n",
+      "\u001B[0;34m[INFO]: \u001B[0m Saving ./LVM_test/outputs/LVM_test_linear_full_6550_6570_21600s_total_map.fits...\n",
+      "\u001B[0;34m[INFO]: \u001B[0m Saving ./LVM_test/outputs/LVM_test_fibers.reg...\n"
      ]
     }
    ],
@@ -827,13 +821,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[0;34m[INFO]: \u001b[0mStart generating 1 nebulae\n",
-      "\u001b[0;34m[INFO]: \u001b[0mGenerated ISM saved to ./LVM_test/testneb_tutorial1.fits\n",
-      "\u001b[0;34m[INFO]: \u001b[0mISM content saved to testneb_tutorial1.fits\n",
-      "\u001b[0;34m[INFO]: \u001b[0m139 Gaia stars in the field\n",
-      "\u001b[0;34m[INFO]: \u001b[0m101 stars are fainter than 18 and have been rejected\n",
-      "\u001b[0;34m[INFO]: \u001b[0mTransforming world coordinates to pixel coordinates\n",
-      "\u001b[0;34m[INFO]: \u001b[0mAssociating spectra to stars using library pollux_resampled_v0.fits...\n"
+      "\u001B[0;34m[INFO]: \u001B[0mStart generating 1 nebulae\n",
+      "\u001B[0;34m[INFO]: \u001B[0mGenerated ISM saved to ./LVM_test/testneb_tutorial1.fits\n",
+      "\u001B[0;34m[INFO]: \u001B[0mISM content saved to testneb_tutorial1.fits\n",
+      "\u001B[0;34m[INFO]: \u001B[0m139 Gaia stars in the field\n",
+      "\u001B[0;34m[INFO]: \u001B[0m101 stars are fainter than 18 and have been rejected\n",
+      "\u001B[0;34m[INFO]: \u001B[0mTransforming world coordinates to pixel coordinates\n",
+      "\u001B[0;34m[INFO]: \u001B[0mAssociating spectra to stars using library pollux_resampled_v0.fits...\n"
      ]
     },
     {
@@ -847,8 +841,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[0;34m[INFO]: \u001b[0mRescaling 38 synthetic spectra.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mSaving star list to: ./LVM_test/LVM_test_starlist.fits.gz\n"
+      "\u001B[0;34m[INFO]: \u001B[0mRescaling 38 synthetic spectra.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mSaving star list to: ./LVM_test/LVM_test_starlist.fits.gz\n"
      ]
     },
     {
@@ -863,37 +857,37 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[1;33m[WARNING]: \u001b[0mThe file ././LVM_test/LVM_test_starlist.fits.gz already exist and it will be overwritten\n",
+      "\u001B[1;33m[WARNING]: \u001B[0mThe file ././LVM_test/LVM_test_starlist.fits.gz already exist and it will be overwritten\n",
       "WARNING: VerifyWarning: Card is too long, comment will be truncated. [astropy.io.fits.card]\n",
-      "\u001b[0;34m[INFO]: \u001b[0mInput image in 6550.0-6570.0AA wavelength range is saved to LVM_test_6550_6570_input_map.fits\n",
-      "\u001b[1;33m[WARNING]: \u001b[0mnrings is defined. It will limit the number of fibers selected.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUsing the full hexagon pattern\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUsing the inner 10 hexagonal rings.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mRotating the bundle to PA = 0 deg.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mSimulating observations.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mReading the atmospheric extinction from file.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mResample extinction file to instrument wavelength solution.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mSimulating the sky emission 2 days from new moon.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUsing sky file: /Users/mors/Science/PyWorkspace/lvmdatasimulator/data/sky/LVM_LVM160_SKY_2.dat\n",
-      "\u001b[0;34m[INFO]: \u001b[0mResample sky emission to instrument wavelength solution.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mRecovering target spectra for 271 fibers.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mStart extracting nebular spectra\n",
-      "\u001b[0;34m[INFO]: \u001b[0mDividing the array in 4 with an overlap of 40.7 arcsec\n",
-      "\u001b[0;34m[INFO]: \u001b[0mResampling spectra to the instrument wavelength solution.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mSaving the outputs:\n",
-      "\u001b[0;34m[INFO]: \u001b[0mInput spectra\n",
-      "\u001b[0;34m[INFO]: \u001b[0m./LVM_test/outputs/LVM_test_linear_full_input.fits saved.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mClean outputs\n",
-      "\u001b[0;34m[INFO]: \u001b[0m./LVM_test/outputs/LVM_test_linear_full_21600_no_noise.fits saved.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUncalibrated outputs\n",
-      "\u001b[0;34m[INFO]: \u001b[0m./LVM_test/outputs/LVM_test_linear_full_21600_realization.fits saved.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mCalibrated outputs\n",
-      "\u001b[0;34m[INFO]: \u001b[0m./LVM_test/outputs/LVM_test_linear_full_21600_flux.fits saved.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mSaving the 2D output maps\n",
-      "\u001b[0;34m[INFO]: \u001b[0m Saving ./LVM_test/outputs/LVM_test_linear_full_6550_6570_21600s_target_map.fits...\n",
-      "\u001b[0;34m[INFO]: \u001b[0m Saving ./LVM_test/outputs/LVM_test_linear_full_6550_6570_21600s_total_map.fits...\n",
-      "\u001b[0;34m[INFO]: \u001b[0m Saving ./LVM_test/outputs/LVM_test_fibers.reg...\n",
-      "\u001b[0;34m[INFO]: \u001b[0mSaving input parameters to LVM_test_input_parameters.yml\n"
+      "\u001B[0;34m[INFO]: \u001B[0mInput image in 6550.0-6570.0AA wavelength range is saved to LVM_test_6550_6570_input_map.fits\n",
+      "\u001B[1;33m[WARNING]: \u001B[0mnrings is defined. It will limit the number of fibers selected.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUsing the full hexagon pattern\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUsing the inner 10 hexagonal rings.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mRotating the bundle to PA = 0 deg.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mSimulating observations.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mReading the atmospheric extinction from file.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mResample extinction file to instrument wavelength solution.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mSimulating the sky emission 2 days from new moon.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUsing sky file: /Users/mors/Science/PyWorkspace/lvmdatasimulator/data/sky/LVM_LVM160_SKY_2.dat\n",
+      "\u001B[0;34m[INFO]: \u001B[0mResample sky emission to instrument wavelength solution.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mRecovering target spectra for 271 fibers.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mStart extracting nebular spectra\n",
+      "\u001B[0;34m[INFO]: \u001B[0mDividing the array in 4 with an overlap of 40.7 arcsec\n",
+      "\u001B[0;34m[INFO]: \u001B[0mResampling spectra to the instrument wavelength solution.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mSaving the outputs:\n",
+      "\u001B[0;34m[INFO]: \u001B[0mInput spectra\n",
+      "\u001B[0;34m[INFO]: \u001B[0m./LVM_test/outputs/LVM_test_linear_full_input.fits saved.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mClean outputs\n",
+      "\u001B[0;34m[INFO]: \u001B[0m./LVM_test/outputs/LVM_test_linear_full_21600_no_noise.fits saved.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUncalibrated outputs\n",
+      "\u001B[0;34m[INFO]: \u001B[0m./LVM_test/outputs/LVM_test_linear_full_21600_realization.fits saved.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mCalibrated outputs\n",
+      "\u001B[0;34m[INFO]: \u001B[0m./LVM_test/outputs/LVM_test_linear_full_21600_flux.fits saved.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mSaving the 2D output maps\n",
+      "\u001B[0;34m[INFO]: \u001B[0m Saving ./LVM_test/outputs/LVM_test_linear_full_6550_6570_21600s_target_map.fits...\n",
+      "\u001B[0;34m[INFO]: \u001B[0m Saving ./LVM_test/outputs/LVM_test_linear_full_6550_6570_21600s_total_map.fits...\n",
+      "\u001B[0;34m[INFO]: \u001B[0m Saving ./LVM_test/outputs/LVM_test_fibers.reg...\n",
+      "\u001B[0;34m[INFO]: \u001B[0mSaving input parameters to LVM_test_input_parameters.yml\n"
      ]
     },
     {
