--- a/examples/LVM_data_simulator_tutorial1.ipynb
+++ b/examples/LVM_data_simulator_tutorial1.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "id": "a0d443ac",
    "metadata": {
-    "id": "a0d443ac",
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "id": "a0d443ac"
    },
    "source": [
     "# LVM Data Simulator tutorial: installation, configuration and basic steps"
@@ -24,18 +21,16 @@
     "- More details on the setup of LVM instrumentation and on the structure of the outputs of the simulator are given in [tutorial #2](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial2.ipynb)\n",
     "- More realistic and useful simulations are considered in [tutorial #3](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial3.ipynb) - please go there if you have already installed and configured the package and want to learn how to simulate the source field in more details.\n",
     "- A dedicated function to run the simulator as an ETC is shown in [tutorial #4](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial4.ipynb) \n",
+    "- If you are interested in producing Raw LVM data (as input for DRP) - please go to [tutorial #5](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial5.ipynb) describing 2D simulator\n",
     "\n",
-    "_Last update: 2022/02/22_"
+    "_Last update: 2023/02/22_"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "845ddee8",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     "## Installation and setup\n",
@@ -78,10 +73,7 @@
    "execution_count": 1,
    "id": "78879487",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -94,10 +86,7 @@
    "cell_type": "markdown",
    "id": "8b1b7c40",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     "## Part 1: Simulating the target field"
@@ -107,10 +96,7 @@
    "cell_type": "markdown",
    "id": "b24263ec",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     "The first step to perform the simulations is to create a field to be observed. Once the field is created, all its components can be saved to fits files and used again in future runs.\n",
@@ -123,10 +109,7 @@
    "execution_count": 2,
    "id": "a24da3f8",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -143,10 +126,7 @@
    "cell_type": "markdown",
    "id": "24f3287d",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     "Then, we need to setup the LVM field object:"
@@ -157,10 +137,7 @@
    "execution_count": 3,
    "id": "4d3ad71d",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -172,10 +149,7 @@
    "cell_type": "markdown",
    "id": "b739fe56",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     "This line initializes the LVMField object. The needed inputs are:\n",
@@ -192,10 +166,7 @@
    "cell_type": "markdown",
    "id": "3e0bce4f",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     "The object is still empty, we need to generate the targets of the simulations. There are two types iof targets that can be simulated: **stars** and **nebulae**.\n",
@@ -210,10 +181,7 @@
    "execution_count": 7,
    "id": "98ed2d93",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -265,10 +233,7 @@
    "cell_type": "markdown",
    "id": "8385224a",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     "Once created, the star list is automatically saved to file, and it can be used to re-run the simulation without having to query GAIA again. The default position of this file is the current working directory, but it can be saved in another position by defining the *directory* argument. To read the saved file:"
@@ -279,10 +244,7 @@
    "execution_count": 8,
    "id": "1a534732",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -301,10 +263,7 @@
    "cell_type": "markdown",
    "id": "6f68cad8",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     "The nebular component, on the other hand, contains a wide variety of different types of sources that can be created. While there are some core quantities shared among most types of sources, many need some type-specific keywords to be defined. For a complete view of the inputs needed for each kind of nebula, we refer to the code documentation and to the [tutorial #3](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial3.ipynb), where the modelling of the ISM is presented in more details.\n",
@@ -317,10 +276,7 @@
    "execution_count": 9,
    "id": "d2528e4f",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -332,10 +288,7 @@
    "cell_type": "markdown",
    "id": "14dd1d9a",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     "To include the nebulae in the LVMField object we can use:"
@@ -346,10 +299,7 @@
    "execution_count": 10,
    "id": "68ea088e",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -371,10 +321,7 @@
    "cell_type": "markdown",
    "id": "1cbf59b0",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     "The nebulae will be saved to file, so that they can be reused for other simulations without having to generate them. To read the nebulae from file:"
@@ -385,10 +332,7 @@
    "execution_count": 11,
    "id": "4f139d90",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -407,10 +351,7 @@
    "cell_type": "markdown",
    "id": "99962edd",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     " ## Part 2: Setting up the simulator\n"
@@ -420,10 +361,7 @@
    "cell_type": "markdown",
    "id": "011dfd29",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     "At this point the Field is ready to be observed. We are still missing, however, the complete instrument setup. The instrument is composed by a **telescope**, a **spectrograph** and a **fiber bundle**. To create the elements we just need to generate the objects as follows:"
@@ -434,10 +372,7 @@
    "execution_count": 12,
    "id": "47e1d6ed",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -461,10 +396,7 @@
    "cell_type": "markdown",
    "id": "1099ce90",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     "So far, we support a single telescope object LVM160() and a single spectrograph configuration LinearSpectrograph(). The latter, in particular, is a spectrograph with a 3650-9800 A wavelength range, and a constant 0.5 A dispersion.\n",
@@ -477,10 +409,7 @@
    "execution_count": 13,
    "id": "dc06bc50",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -514,10 +443,7 @@
    "cell_type": "markdown",
    "id": "54ea801d",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     "The last step before running the simulator is to define the properties of the observations by initializing the **Observation** object. Also this object is configurable and all the different options will be described in [tutorial #2](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial2.ipynb).\n"
@@ -528,10 +454,7 @@
    "execution_count": 14,
    "id": "427363a4",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -542,10 +465,7 @@
    "cell_type": "markdown",
    "id": "b9daf531",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     "## Part 3: Running the simulator"
@@ -555,10 +475,7 @@
    "cell_type": "markdown",
    "id": "23165351",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     "Now we are ready to perform the simulation. First we initialize the simulator, giving it as an input all the things we already initialized:"
@@ -569,10 +486,7 @@
    "execution_count": 15,
    "id": "8371845c",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -583,10 +497,7 @@
    "cell_type": "markdown",
    "id": "4f9ff4dd",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     "Them we can perform the simulations and save the outputs:"
@@ -597,10 +508,7 @@
    "execution_count": 16,
    "id": "4b822594",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -642,10 +550,7 @@
    "cell_type": "markdown",
    "id": "9751e2a9",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     "Also a detailed description of the outputs will be provided in [tutorial #2](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial2.ipynb)."
@@ -655,10 +560,7 @@
    "cell_type": "markdown",
    "id": "f7c6aa57",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     "## Part 4: running the simulator - easy version"
@@ -668,10 +570,7 @@
    "cell_type": "markdown",
    "id": "4e550bcd",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     "If the user do not want to manually setup the simulations, we prepared a small script that accepts as an input a dictionary which contains all the parameters needed to produce the simulations. If a parameter is not present in the dictionary, a default value will be used. To take advantage of this new approach, first we need to import the script and the astropy units package (in case if you want to explicitly define the quantities):"
@@ -682,10 +581,7 @@
    "execution_count": 17,
    "id": "b5eeda16",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -698,10 +594,7 @@
    "cell_type": "markdown",
    "id": "97783113",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     "Then, we have to prepare a list with all the nebulae that should be simulated."
@@ -712,10 +605,7 @@
    "execution_count": 18,
    "id": "daba306a",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -728,10 +618,7 @@
    "cell_type": "markdown",
    "id": "5dcc84b3",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     "In this case we are simulating the same field described in Part 1 of this tutorial. If a source field is already available, it is possible to use it by providing its name in the dictionary using the ```nebulae_from_file``` keyword.\n",
@@ -744,10 +631,7 @@
    "execution_count": 21,
    "id": "c53b426b",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -795,10 +679,7 @@
    "cell_type": "markdown",
    "id": "317531e7",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     "This dictionary will setup exactly the same configuration we simulate before during this tutorial, with the exception of the bundle, which will be in a 10 rings \"full\" configuration.\n",
@@ -811,10 +692,7 @@
    "execution_count": 22,
    "id": "f580fee8",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -906,10 +784,7 @@
    "cell_type": "markdown",
    "id": "b0c47a55",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     "Multiple images can be produced at the same time, by providing a list of wavelength ranges to be integrated."
@@ -919,10 +794,7 @@
    "cell_type": "markdown",
    "id": "2dda528e",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     "Multiple images can be produced at the same time, by providing a list of wavelength ranges to be integrated."
@@ -932,10 +804,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
