--- a/examples/LVM_data_simulator_tutorial1.ipynb
+++ b/examples/LVM_data_simulator_tutorial1.ipynb
@@ -11,6 +11,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9fd17acd",
    "metadata": {
@@ -23,7 +24,7 @@
     "- A dedicated function to run the simulator as an ETC is shown in [tutorial #4](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial4.ipynb) \n",
     "- If you are interested in producing Raw LVM data (as input for DRP) - please go to [tutorial #5](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial5.ipynb) describing 2D simulator\n",
     "\n",
-    "_Last update: 2023/02/22_"
+    "_Last update: 2023/03/07_"
    ]
   },
   {
@@ -47,6 +48,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "723d7986",
    "metadata": {
@@ -59,9 +61,11 @@
     "\n",
     "To download them you should run the following commands and move the files in the ```lvmdatasimulator/data``` directory:\n",
     "\n",
-    "```wget ftp@ftp.das.uchile.cl:/pub/enrico/LVM_cloudy_models_phys.fits```\n",
+    "```wget https://data.sdss5.org/resources/lvmdatasimulator/data/for_download/LVM_cloudy_models_phys.fits```\n",
     "\n",
-    "```wget ftp@ftp.das.uchile.cl:/pub/enrico/pollux_resampled_v0.fits```\n",
+    "```wget https://data.sdss5.org/resources/lvmdatasimulator/data/for_download/pollux_resampled_v0.fits```\n",
+    "\n",
+    "Alternatively, the files can be recovered manually from the following link: ```https://data.sdss5.org/resources/lvmdatasimulator/data/for_download/```\n",
     "\n",
     "At this point, everything should be ready to go. We just want to highlight that this is still a work-in-progress, and in the future how the simulator is called could change significantly. The goal is to write a main.py script able to read a configuration file.\n",
     "\n",
@@ -188,10 +192,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[0;34m[INFO]: \u001B[0m139 Gaia stars in the field\n",
-      "\u001B[0;34m[INFO]: \u001B[0m101 stars are fainter than 18 and have been rejected\n",
-      "\u001B[0;34m[INFO]: \u001B[0mTransforming world coordinates to pixel coordinates\n",
-      "\u001B[0;34m[INFO]: \u001B[0mAssociating spectra to stars using library pollux_resampled_v0.fits...\n"
+      "\u001b[0;34m[INFO]: \u001b[0m139 Gaia stars in the field\n",
+      "\u001b[0;34m[INFO]: \u001b[0m101 stars are fainter than 18 and have been rejected\n",
+      "\u001b[0;34m[INFO]: \u001b[0mTransforming world coordinates to pixel coordinates\n",
+      "\u001b[0;34m[INFO]: \u001b[0mAssociating spectra to stars using library pollux_resampled_v0.fits...\n"
      ]
     },
     {
@@ -205,8 +209,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[0;34m[INFO]: \u001B[0mRescaling 38 synthetic spectra.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mSaving star list to: ./LVM_test/LVM_test_starlist.fits.gz\n"
+      "\u001b[0;34m[INFO]: \u001b[0mRescaling 38 synthetic spectra.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mSaving star list to: ./LVM_test/LVM_test_starlist.fits.gz\n"
      ]
     },
     {
@@ -251,7 +255,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[0;34m[INFO]: \u001B[0mReading the star list from file ./LVM_test/LVM_test_starlist.fits.gz\n"
+      "\u001b[0;34m[INFO]: \u001b[0mReading the star list from file ./LVM_test/LVM_test_starlist.fits.gz\n"
      ]
     }
    ],
@@ -306,10 +310,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[0;34m[INFO]: \u001B[0mStart generating 1 nebulae\n",
-      "\u001B[1;33m[WARNING]: \u001B[0mNo model ids or model parameters are set for the nebula #0: use default cloudy 'model_id=Cloud_366'\n",
-      "\u001B[0;34m[INFO]: \u001B[0mGenerated ISM saved to ./LVM_test/testneb_tutorial1.fits\n",
-      "\u001B[0;34m[INFO]: \u001B[0mISM content saved to testneb_tutorial1.fits\n"
+      "\u001b[0;34m[INFO]: \u001b[0mStart generating 1 nebulae\n",
+      "\u001b[1;33m[WARNING]: \u001b[0mNo model ids or model parameters are set for the nebula #0: use default cloudy 'model_id=Cloud_366'\n",
+      "\u001b[0;34m[INFO]: \u001b[0mGenerated ISM saved to ./LVM_test/testneb_tutorial1.fits\n",
+      "\u001b[0;34m[INFO]: \u001b[0mISM content saved to testneb_tutorial1.fits\n"
      ]
     }
    ],
@@ -339,7 +343,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[0;34m[INFO]: \u001B[0mNebulae successfully loaded from file\n"
+      "\u001b[0;34m[INFO]: \u001b[0mNebulae successfully loaded from file\n"
      ]
     }
    ],
@@ -379,10 +383,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[1;33m[WARNING]: \u001B[0mnrings is defined. It will limit the number of fibers selected.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUsing the full hexagon pattern\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUsing the inner 5 hexagonal rings.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mRotating the bundle to PA = 0 deg.\n"
+      "\u001b[1;33m[WARNING]: \u001b[0mnrings is defined. It will limit the number of fibers selected.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUsing the full hexagon pattern\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUsing the inner 5 hexagonal rings.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mRotating the bundle to PA = 0 deg.\n"
      ]
     }
    ],
@@ -416,11 +420,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[1;33m[WARNING]: \u001B[0mnrings is defined. It will limit the number of fibers selected.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUsing the full hexagon pattern\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUsing the inner 5 hexagonal rings.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mRotating the bundle to PA = 0 deg.\n",
-      "\u001B[1;33m[WARNING]: \u001B[0mBundle center coords are not defined, using the coords of the field.\n"
+      "\u001b[1;33m[WARNING]: \u001b[0mnrings is defined. It will limit the number of fibers selected.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUsing the full hexagon pattern\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUsing the inner 5 hexagonal rings.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mRotating the bundle to PA = 0 deg.\n",
+      "\u001b[1;33m[WARNING]: \u001b[0mBundle center coords are not defined, using the coords of the field.\n"
      ]
     },
     {
@@ -515,28 +519,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[0;34m[INFO]: \u001B[0mSimulating observations.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mReading the atmospheric extinction from file.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mResample extinction file to instrument wavelength solution.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mSimulating the sky emission 2 days from new moon.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUsing sky file: /Users/mors/Science/PyWorkspace/lvmdatasimulator/data/sky/LVM_LVM160_SKY_2.dat\n",
-      "\u001B[0;34m[INFO]: \u001B[0mResample sky emission to instrument wavelength solution.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mRecovering target spectra for 61 fibers.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mStart extracting nebular spectra\n",
-      "\u001B[0;34m[INFO]: \u001B[0mResampling spectra to the instrument wavelength solution.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mSaving the outputs:\n",
-      "\u001B[0;34m[INFO]: \u001B[0mInput spectra\n",
-      "\u001B[0;34m[INFO]: \u001B[0m./LVM_test/outputs/LVM_test_linear_full_input.fits saved.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mClean outputs\n",
-      "\u001B[0;34m[INFO]: \u001B[0m./LVM_test/outputs/LVM_test_linear_full_21600_no_noise.fits saved.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUncalibrated outputs\n",
-      "\u001B[0;34m[INFO]: \u001B[0m./LVM_test/outputs/LVM_test_linear_full_21600_realization.fits saved.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mCalibrated outputs\n",
-      "\u001B[0;34m[INFO]: \u001B[0m./LVM_test/outputs/LVM_test_linear_full_21600_flux.fits saved.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mSaving the 2D output maps\n",
-      "\u001B[0;34m[INFO]: \u001B[0m Saving ./LVM_test/outputs/LVM_test_linear_full_6550_6570_21600s_target_map.fits...\n",
-      "\u001B[0;34m[INFO]: \u001B[0m Saving ./LVM_test/outputs/LVM_test_linear_full_6550_6570_21600s_total_map.fits...\n",
-      "\u001B[0;34m[INFO]: \u001B[0m Saving ./LVM_test/outputs/LVM_test_fibers.reg...\n"
+      "\u001b[0;34m[INFO]: \u001b[0mSimulating observations.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mReading the atmospheric extinction from file.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mResample extinction file to instrument wavelength solution.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mSimulating the sky emission 2 days from new moon.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUsing sky file: /Users/mors/Science/PyWorkspace/lvmdatasimulator/data/sky/LVM_LVM160_SKY_2.dat\n",
+      "\u001b[0;34m[INFO]: \u001b[0mResample sky emission to instrument wavelength solution.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mRecovering target spectra for 61 fibers.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mStart extracting nebular spectra\n",
+      "\u001b[0;34m[INFO]: \u001b[0mResampling spectra to the instrument wavelength solution.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mSaving the outputs:\n",
+      "\u001b[0;34m[INFO]: \u001b[0mInput spectra\n",
+      "\u001b[0;34m[INFO]: \u001b[0m./LVM_test/outputs/LVM_test_linear_full_input.fits saved.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mClean outputs\n",
+      "\u001b[0;34m[INFO]: \u001b[0m./LVM_test/outputs/LVM_test_linear_full_21600_no_noise.fits saved.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUncalibrated outputs\n",
+      "\u001b[0;34m[INFO]: \u001b[0m./LVM_test/outputs/LVM_test_linear_full_21600_realization.fits saved.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mCalibrated outputs\n",
+      "\u001b[0;34m[INFO]: \u001b[0m./LVM_test/outputs/LVM_test_linear_full_21600_flux.fits saved.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mSaving the 2D output maps\n",
+      "\u001b[0;34m[INFO]: \u001b[0m Saving ./LVM_test/outputs/LVM_test_linear_full_6550_6570_21600s_target_map.fits...\n",
+      "\u001b[0;34m[INFO]: \u001b[0m Saving ./LVM_test/outputs/LVM_test_linear_full_6550_6570_21600s_total_map.fits...\n",
+      "\u001b[0;34m[INFO]: \u001b[0m Saving ./LVM_test/outputs/LVM_test_fibers.reg...\n"
      ]
     }
    ],
@@ -699,13 +703,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[0;34m[INFO]: \u001B[0mStart generating 1 nebulae\n",
-      "\u001B[0;34m[INFO]: \u001B[0mGenerated ISM saved to ./LVM_test/testneb_tutorial1.fits\n",
-      "\u001B[0;34m[INFO]: \u001B[0mISM content saved to testneb_tutorial1.fits\n",
-      "\u001B[0;34m[INFO]: \u001B[0m139 Gaia stars in the field\n",
-      "\u001B[0;34m[INFO]: \u001B[0m101 stars are fainter than 18 and have been rejected\n",
-      "\u001B[0;34m[INFO]: \u001B[0mTransforming world coordinates to pixel coordinates\n",
-      "\u001B[0;34m[INFO]: \u001B[0mAssociating spectra to stars using library pollux_resampled_v0.fits...\n"
+      "\u001b[0;34m[INFO]: \u001b[0mStart generating 1 nebulae\n",
+      "\u001b[0;34m[INFO]: \u001b[0mGenerated ISM saved to ./LVM_test/testneb_tutorial1.fits\n",
+      "\u001b[0;34m[INFO]: \u001b[0mISM content saved to testneb_tutorial1.fits\n",
+      "\u001b[0;34m[INFO]: \u001b[0m139 Gaia stars in the field\n",
+      "\u001b[0;34m[INFO]: \u001b[0m101 stars are fainter than 18 and have been rejected\n",
+      "\u001b[0;34m[INFO]: \u001b[0mTransforming world coordinates to pixel coordinates\n",
+      "\u001b[0;34m[INFO]: \u001b[0mAssociating spectra to stars using library pollux_resampled_v0.fits...\n"
      ]
     },
     {
@@ -719,8 +723,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[0;34m[INFO]: \u001B[0mRescaling 38 synthetic spectra.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mSaving star list to: ./LVM_test/LVM_test_starlist.fits.gz\n"
+      "\u001b[0;34m[INFO]: \u001b[0mRescaling 38 synthetic spectra.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mSaving star list to: ./LVM_test/LVM_test_starlist.fits.gz\n"
      ]
     },
     {
@@ -735,37 +739,37 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[1;33m[WARNING]: \u001B[0mThe file ././LVM_test/LVM_test_starlist.fits.gz already exist and it will be overwritten\n",
+      "\u001b[1;33m[WARNING]: \u001b[0mThe file ././LVM_test/LVM_test_starlist.fits.gz already exist and it will be overwritten\n",
       "WARNING: VerifyWarning: Card is too long, comment will be truncated. [astropy.io.fits.card]\n",
-      "\u001B[0;34m[INFO]: \u001B[0mInput image in 6550.0-6570.0AA wavelength range is saved to LVM_test_6550_6570_input_map.fits\n",
-      "\u001B[1;33m[WARNING]: \u001B[0mnrings is defined. It will limit the number of fibers selected.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUsing the full hexagon pattern\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUsing the inner 10 hexagonal rings.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mRotating the bundle to PA = 0 deg.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mSimulating observations.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mReading the atmospheric extinction from file.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mResample extinction file to instrument wavelength solution.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mSimulating the sky emission 2 days from new moon.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUsing sky file: /Users/mors/Science/PyWorkspace/lvmdatasimulator/data/sky/LVM_LVM160_SKY_2.dat\n",
-      "\u001B[0;34m[INFO]: \u001B[0mResample sky emission to instrument wavelength solution.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mRecovering target spectra for 271 fibers.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mStart extracting nebular spectra\n",
-      "\u001B[0;34m[INFO]: \u001B[0mDividing the array in 4 with an overlap of 40.7 arcsec\n",
-      "\u001B[0;34m[INFO]: \u001B[0mResampling spectra to the instrument wavelength solution.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mSaving the outputs:\n",
-      "\u001B[0;34m[INFO]: \u001B[0mInput spectra\n",
-      "\u001B[0;34m[INFO]: \u001B[0m./LVM_test/outputs/LVM_test_linear_full_input.fits saved.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mClean outputs\n",
-      "\u001B[0;34m[INFO]: \u001B[0m./LVM_test/outputs/LVM_test_linear_full_21600_no_noise.fits saved.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUncalibrated outputs\n",
-      "\u001B[0;34m[INFO]: \u001B[0m./LVM_test/outputs/LVM_test_linear_full_21600_realization.fits saved.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mCalibrated outputs\n",
-      "\u001B[0;34m[INFO]: \u001B[0m./LVM_test/outputs/LVM_test_linear_full_21600_flux.fits saved.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mSaving the 2D output maps\n",
-      "\u001B[0;34m[INFO]: \u001B[0m Saving ./LVM_test/outputs/LVM_test_linear_full_6550_6570_21600s_target_map.fits...\n",
-      "\u001B[0;34m[INFO]: \u001B[0m Saving ./LVM_test/outputs/LVM_test_linear_full_6550_6570_21600s_total_map.fits...\n",
-      "\u001B[0;34m[INFO]: \u001B[0m Saving ./LVM_test/outputs/LVM_test_fibers.reg...\n",
-      "\u001B[0;34m[INFO]: \u001B[0mSaving input parameters to LVM_test_input_parameters.yml\n"
+      "\u001b[0;34m[INFO]: \u001b[0mInput image in 6550.0-6570.0AA wavelength range is saved to LVM_test_6550_6570_input_map.fits\n",
+      "\u001b[1;33m[WARNING]: \u001b[0mnrings is defined. It will limit the number of fibers selected.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUsing the full hexagon pattern\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUsing the inner 10 hexagonal rings.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mRotating the bundle to PA = 0 deg.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mSimulating observations.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mReading the atmospheric extinction from file.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mResample extinction file to instrument wavelength solution.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mSimulating the sky emission 2 days from new moon.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUsing sky file: /Users/mors/Science/PyWorkspace/lvmdatasimulator/data/sky/LVM_LVM160_SKY_2.dat\n",
+      "\u001b[0;34m[INFO]: \u001b[0mResample sky emission to instrument wavelength solution.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mRecovering target spectra for 271 fibers.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mStart extracting nebular spectra\n",
+      "\u001b[0;34m[INFO]: \u001b[0mDividing the array in 4 with an overlap of 40.7 arcsec\n",
+      "\u001b[0;34m[INFO]: \u001b[0mResampling spectra to the instrument wavelength solution.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mSaving the outputs:\n",
+      "\u001b[0;34m[INFO]: \u001b[0mInput spectra\n",
+      "\u001b[0;34m[INFO]: \u001b[0m./LVM_test/outputs/LVM_test_linear_full_input.fits saved.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mClean outputs\n",
+      "\u001b[0;34m[INFO]: \u001b[0m./LVM_test/outputs/LVM_test_linear_full_21600_no_noise.fits saved.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUncalibrated outputs\n",
+      "\u001b[0;34m[INFO]: \u001b[0m./LVM_test/outputs/LVM_test_linear_full_21600_realization.fits saved.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mCalibrated outputs\n",
+      "\u001b[0;34m[INFO]: \u001b[0m./LVM_test/outputs/LVM_test_linear_full_21600_flux.fits saved.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mSaving the 2D output maps\n",
+      "\u001b[0;34m[INFO]: \u001b[0m Saving ./LVM_test/outputs/LVM_test_linear_full_6550_6570_21600s_target_map.fits...\n",
+      "\u001b[0;34m[INFO]: \u001b[0m Saving ./LVM_test/outputs/LVM_test_linear_full_6550_6570_21600s_total_map.fits...\n",
+      "\u001b[0;34m[INFO]: \u001b[0m Saving ./LVM_test/outputs/LVM_test_fibers.reg...\n",
+      "\u001b[0;34m[INFO]: \u001b[0mSaving input parameters to LVM_test_input_parameters.yml\n"
      ]
     },
     {
@@ -831,7 +835,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Oct 13 2022, 21:15:33) \n[GCC 11.2.0]"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
