modifying the procedure to download remote files

--- a/examples/LVM_data_simulator_tutorial1.ipynb
+++ b/examples/LVM_data_simulator_tutorial1.ipynb
@@ -24,7 +24,7 @@
     "- A dedicated function to run the simulator as an ETC is shown in [tutorial #4](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial4.ipynb) \n",
     "- If you are interested in producing Raw LVM data (as input for DRP) - please go to [tutorial #5](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial5.ipynb) describing 2D simulator\n",
     "\n",
-    "_Last update: 2023/03/07_"
+    "_Last update: 2023/09/28_"
    ]
   },
   {
@@ -57,15 +57,18 @@
    "source": [
     "### Downloading libraries\n",
     "\n",
-    "Once the package is installed, you have to download three files that are temporarily stored in an FTP server at Universidad de Chile.\n",
+    "Once the package is installed, you have to download several files that cannot be handled by github because they are too large and are stored in the SAS.\n",
+    "There is now an automatic function that can be used to automatically download the data and move them to the correct location.\n",
     "\n",
-    "To download them you should run the following commands and move the files in the ```lvmdatasimulator/data``` directory:\n",
+    "So once the package is installed run the following commands in a ipython session:\n",
+    "```\n",
+    "from lvmdatasimulator import download_data\n",
+    "download_data()\n",
+    "```\n",
     "\n",
-    "```wget https://data.sdss5.org/resources/lvmdatasimulator/data/for_download/LVM_cloudy_models_phys.fits```\n",
+    "Alternatively, all the files can be recovered manually from the following link: ```https://data.sdss5.org/resources/lvmdatasimulator/data/for_download/```.\n",
     "\n",
-    "```wget https://data.sdss5.org/resources/lvmdatasimulator/data/for_download/pollux_resampled_v0.fits```\n",
-    "\n",
-    "Alternatively, the files can be recovered manually from the following link: ```https://data.sdss5.org/resources/lvmdatasimulator/data/for_download/```\n",
+    "Please run this command regularly, so that the files are always updated.\n",
     "\n",
     "At this point, everything should be ready to go. We just want to highlight that this is still a work-in-progress, and in the future how the simulator is called could change significantly. The goal is to write a main.py script able to read a configuration file.\n",
     "\n",
